canilearntocode/common/static/css/styles.css
/* Font customizations */

h1, h2, h3, h4, h5, h6 {
    font-family: 'Ubuntu', sans-serif;
}
p, div {
    font-family: 'Open Sans', sans-serif;
}

/* Navbar customizations */

body {
    padding-top: 200px;
}

.navbar-inverse .navbar-nav > li > a {
    color: #000204;
}

.navbar-inverse {
    background-color: #f5f5f5;
    background-image: none;
    background-repeat: no-repeat;
    border-color: #E7E7E7;
}

.navbar-brand {
    height: 140px;
}

.custom-nav-text {
    color: #4e4e4e;
}

.navbar-inverse .navbar-toggle {
    background-color: #4e4e4e;
}

.search-form {
    border: 0 !important;
    box-shadow: none;
    margin-right: 0 !important;
}

/* Sub nav */
.sub-navbar {
    margin-top: 190px;
    background-image: none;
    background-color: #428bca;
}

.subnav-menu > li > a {
    color: #ffffff !important;
    text-shadow: none !important;
}

.subnav-menu > li > a:hover {
    color: #d9edf7 !important;
    text-shadow: none !important;
}

@media (min-width: 768px) {
    .sub-navbar {
        margin-left: -20px;
        margin-top: 140px;
    }
}

/* Breadcrumb customizations */

hr {
    border: 0;
    height: 1px;
    background: #ccc;
}

/* Icon customization */

.social-icons {
    padding-top: 20px;
}

.social-icon {
    color: #4e4e4e;
    margin-right: 40px;
}

.social-icon:hover {
    color: #71b2e2;
}

/* Right panel */
#logo-text {
    padding-left: 10px;
}

